# nebula-pyg

./: OGBN.py  OGBN_train.py  README.md  pyproject.toml  requirements.txt
doc/Multi-process/: Multi-process.md  Multi-process_zh-CN.md
examples/: gen_snapshot.py  get_started.ipynb  test_feature_store.py  test_graph_store.py  test_nebula_pyg.py  test_utils.py  train_products.py  train_pyg_on_nebula.py
examples/Cora_LinkPred/: import_cora_to_nebula.py  train_cora_lp.py  train_cora_lpba.py
examples/OGBN_arxiv/: OGBN.py  OGBN_train.py
examples/snapshot/: snapshot_vid_to_idx.json
nebula_pyg/: base_store.py  connection.py  feature_store.py  graph_store,py.py  graph_store.py  nebula_pyg.py  sampler.py  type_helper.py  utils.py
nebula_pyg/utils/: utils.py  vid_codec.py
tests/: test_feature_store.py  test_graph_store.py  test_utils.py
