[project]
name = "nebula-pyg"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "caifengze", email = "fengzcw@gmail.com"},
    {name = "fengze", email = ""},
    {name = "", email = ""},
    {name = "fengzc", email = ""},
]
dependencies = [
    "nebula3-python @ file:///${PROJECT_ROOT}/../nebula-python",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "pip>=25.1.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "torch-geometric>=2.6.1",
    "torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.7.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl",
    "pyg-lib @ https://data.pyg.org/whl/torch-2.7.0%2Bcpu/pyg_lib-0.4.0%2Bpt27cpu-cp311-cp311-linux_x86_64.whl",
]
requires-python = ">=3.6.2,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
